--- a/react_front/package.json
+++ b/react_front/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-navbar-dropdowns": "^5.0.2",
     "bootswatch": "^5.1.3",
+    "dotenv": "^16.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
