--- a/react_front/package.json
+++ b/react_front/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-promise-tracker": "^2.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
@@ -42,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-syntax-top-level-await": "^7.14.5"
   }
 }
