--- a/react_front/package.json
+++ b/react_front/package.json
@@ -12,6 +12,7 @@
     "bootswatch": "^5.1.3",
     "dotenv": "^16.0.0",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-promise-tracker": "^2.1.0",
     "react-router-dom": "^6.3.0",
